# autoflow

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  autoflow.spec  build_mac.sh  build_py2app.sh  build_windows.ps1  create_test_license.py  database.py  license.py  nixpacks.toml  pyi_rth_autoflow_tesseract.py  pyproject.toml  railway.json  requirements-backend.txt  requirements-desktop.txt  requirements.txt  setup.py  typestra_windows.spec
.github/workflows/: build-windows.yml  ci.yml  publish.yml
migrations/: env.py
migrations/versions/: 20260418_0001_initial_license_schema.py
packaging_py2app/: setup.py
resources/: AutoFlow.icns
resources/demo_data/: demo_candidates.csv  demo_crm_contacts.csv  demo_invoices.csv
src/: auto_calculations.py  autoflow.py  autoflow_v3.py  browser_context.py  cli.py  demo_mode.py  error_detection.py  firefox_warning.py  job_scheduler.py  license_manager.py  ocr_capture.py  resume_prompt.py  retry_manager.py  session_manager.py  sleep_wake_detector.py  smart_fill.py  tab_injector.py  tab_picker.py  typing_engine.py  upgrade_prompt.py
src/autoflow_engine/: __init__.py  cli.py  typing_engine.py
tests/: test_backend_api.py  test_license_manager.py  test_stripe_webhook.py  test_tier_entitlements.py  test_typing_engine.py
